# pangea-client

./: .gitignore  README.md  shell.nix
node/: .npmignore  .prettierrc.json  .swcrc  .swcrc.dev  README.md  package-lock.json  package.json  tsconfig.json
node/examples/: README.md  arrow-blocks.ts  index_arrow.js  index_json.js  jsonstream-blocks.ts  jsonstream-status.ts  package.json
node/scripts/: pack.js  postpack.js
node/src/: index.d.js.map  index.d.ts  index.js  index.js.map  index.ts
node/tests/: schemas.test.ts
node/tests/schemas/: jsonstream-blocks.ts  jsonstream-status.ts
python/: README.md  pyproject.toml
python/examples/: arrow-blocks.py  jsonstream-blocks.py  jsonstream-status.py
python/scripts/: pack.py
python/tests/: test_schema.py
python/tests/schemas/: jsonstream-blocks.py  jsonstream-status.py
rust/: Cargo.toml  README.md  cargofmt.toml
rust-examples/: Cargo.toml  README.md
rust-examples/examples/: ethereum-logs.rs  ethereum-transactions.rs  ethereum.rs  fuel-spark.rs  fuel.rs  status.rs  uniswap.rs
rust/examples/: arrow-blocks.rs  jsonstream-blocks.rs  jsonstream-status.rs  uniswap.rs
rust/pack-crate/: Cargo.toml
rust/pack-crate/src/: main.rs
rust/src/: lib.rs
rust/src/core/: builder.rs  client.rs  error.rs  provider.rs
rust/src/core/requests/: fuel.rs  mira.rs  mod.rs  uniswap_v3.rs
rust/src/core/types/: fuel.rs  mira.rs  mod.rs  query.rs  status.rs
rust/src/providers/: http.rs  ws.rs
rust/tests/: schemas_test.rs
rust/tests/schemas/: jsonstream-blocks.rs  jsonstream-status.rs  mod.rs
src/core/: builder.rs  client.rs  error.rs  provider.rs
src/core/requests/: fuel.rs
src/core/types/: fuel.rs  mod.rs
src/providers/: http.rs  ws.rs
