[package]
edition = "2021"
name = "pangea-client-examples"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = "2.0.14"
futures = "0.3.30"
polars ={version = "0.41.3", features = ["ipc_streaming", "dtype-u8"]}
tiny-keccak = { version = "2.0", features = ["sha3"] }
tokio = { version = "1.36.0", features = ["macros", "sync"] }

pangea-client = { path = "../rust" }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
