# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
exclude = [
    "Cargo.toml.orig",
    ".vscode/**",
    "examples/**",
    "publish-crate/**",
    "tests/**",
] # when publishing

name = "pangea-client"
version = "0.3.6"
edition = "2021"
description = "Client SDK for Pangea The Open Index Protocol"
keywords = ["sdk", "blockchain", "indexing", "uniswap"]
categories = ["api-bindings"]
license = "MIT"
authors = ["Pangea Foundation <info@pangea.foundation>"]
homepage = "https://pangea.foundation"
repository = "https://github.com/PangeaFoundation/pangea-client"
documentation = "https://docs.pangea.foundation/introduction.html"

[dependencies]
fuel-core-types = "0.40.2"
async-trait = "0.1.77"
base64 = "0.22.0"
csv-async = "1.2.6"
ethers-core = "2.0.14"
futures = "0.3.30"
http = "1.0.0"
lazy_static = "1.4.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
arrow = { version = "54.2.0", features = ["prettyprint"] }
tokio-stream = { version = "0.1.0", features = ["full"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
dotenvy = "0.15.7"
env_logger = "0.11.2"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[workspace]
members = ["publish-crate"]
